--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <header class="w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white py-6 text-center">
     <h1 class="text-4xl font-bold">לוח מחוונים עסקיים - פנתר תקשורת</h1>
     <p class="mt-2 text-lg max-w-2xl mx-auto">
-      פנתר תקשורת היא חברת סלולר פיקטיבית המדמה פעילות עסקית של חברת תקשורת אמיתית. המערכת מציגה שלושה דשבורדים מרכזיים שנועדו לשקף נתונים מעולמות השירות, התפעול והלקוחות. הדשבורדים מבוססים על נתוני לקוחות, פניות שירות וניתוחים תפעוליים, ומטרתם לאפשר קבלת החלטות מושכלות המבוססות על מגמות, עומסים ותחזיות – והכול בצורה ברורה, נגישה ואינטראקטיבית.
+      פנתר תקשורת היא חברת הסלולר הגדולה בישראל. תפקיד מערכת זו להציג שלושה דשבורדים מרכזיים שנועדו לשקף נתונים מעולמות השירות, התפעול והלקוחות. הדשבורדים מבוססים על נתוני לקוחות, פניות שירות וניתוחים תפעוליים, ומטרתם לאפשר קבלת החלטות מושכלות המבוססות על מגמות, עומסים ותחזיות – והכול בצורה ברורה, נגישה ואינטראקטיבית.
     </p>
   </header>
 
